// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`dashboard golden frames renders many-projects at 80x24 1`] = `
"wosm                                                                            
─────────────────────────────────────────────────────────────────────────────── 
                                                                                
▼ wosm - 5 worktrees | codex                                                    
 [1] ○ cli-help-man                      codex     idle            +14 -6 #70 ✓ 
 [2] - docs-cleanup                      -         no agent                     
 [3] ○ pty-buffer                        codex     idle                   #73 ✓ 
 [4] + session-resume                    codex     starting                     
 [5] ◜ station-overlay                   codex     working       +412 -96 #76 … 
                                                                                
▼ observer - 3 worktrees | opencode                                             
 [6] x batch-export                      opencode  exited                  #8 ✓ 
 [7] ◜ provider-hooks                    opencode  working         +32 -8 #16 … 
 [8] ○ trace-bundle                      opencode  idle              +1 -1 #4 ✓ 
                                                                                
▼ scripts - 3 worktrees | opencode                                              
 [9] ○ api-cache                         opencode  idle            +14 -6 #5 x1 
 [a] ? metadata-refresh                  opencode  unknown            +3 -1 #10 
 [b] - old-experiment                    -         no agent                     
                                                                                
▼ empty-project - 0 worktrees | codex                                           
↓ 1 hidden                                                                      
─────────────────────────────────────────────────────────────────────────────── 
Q/esc:close N:new A:add Z:refresh 1-9/a-z:open X:remove /:search H:help         
"
`;

exports[`dashboard golden frames renders many-projects at 120x40 1`] = `
"wosm                                                                                                                    
─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────── 
                                                                                                                        
▼ wosm - 5 worktrees | codex                                                                                            
 [1] ○ cli-help-man                      codex     idle                                                    +14 -6 #70 ✓ 
 [2] - docs-cleanup                      -         no agent                                                             
 [3] ○ pty-buffer                        codex     idle                                                           #73 ✓ 
 [4] + session-resume                    codex     starting                                                             
 [5] ◜ station-overlay                   codex     working                                               +412 -96 #76 … 
                                                                                                                        
▼ observer - 3 worktrees | opencode                                                                                     
 [6] x batch-export                      opencode  exited                                                          #8 ✓ 
 [7] ◜ provider-hooks                    opencode  working                                                 +32 -8 #16 … 
 [8] ○ trace-bundle                      opencode  idle                                                      +1 -1 #4 ✓ 
                                                                                                                        
▼ scripts - 3 worktrees | opencode                                                                                      
 [9] ○ api-cache                         opencode  idle                                                    +14 -6 #5 x1 
 [a] ? metadata-refresh                  opencode  unknown                                                    +3 -1 #10 
 [b] - old-experiment                    -         no agent                                                             
                                                                                                                        
▼ empty-project - 0 worktrees | codex                                                                                   
 0 worktrees                                                                                                            
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────── 
N:new A:add R:rename Z:refresh 1-9/a-z:open X:rm /:search C:fold H:help Q/esc:close                                     
"
`;

exports[`dashboard golden frames renders many-projects at 60x16 1`] = `
"wosm                                                        
─────────────────────────────────────────────────────────── 
                                                            
▼ wosm - 5 worktrees | codex                                
 [1] ○ cli-help-man   codex     idle           +14 -6 #70 ✓ 
 [2] - docs-cleanup   -         no agent                    
 [3] ○ pty-buffer     codex     idle                  #73 ✓ 
 [4] + session-resu…  codex     starting                    
 [5] ◜ station-over…  codex     working      +412 -96 #76 … 
                                                            
▼ observer - 3 worktrees | opencode                         
 [6] x batch-export   opencode  exited                 #8 ✓ 
 [7] ◜ provider-hoo…  opencode  working        +32 -8 #16 … 
↓ 9 hidden                                                  
─────────────────────────────────────────────────────────── 
Q/esc:close N:new A:add Z:refresh 1-9/a-z:open X:remove /:… 
"
`;

exports[`dashboard golden frames renders many-projects at 40x12 1`] = `
"wosm                                    
─────────────────────────────────────── 
                                        
▼ wosm - 5 worktrees | codex            
 [1] ○ cli-he…  codex      +14 -6 #70 ✓ 
 [2] - docs-c…  -                       
 [3] ○ pty-bu…  codex             #73 ✓ 
 [4] + sessio…  codex                   
 [5] ◜ statio…  codex    +412 -96 #76 … 
↓ 13 hidden                             
─────────────────────────────────────── 
Q/esc:close N:new A:add Z:refresh 1-9/… 
"
`;

exports[`dashboard golden frames renders attention-and-failures at 80x24 1`] = `
"wosm                                                                            
─────────────────────────────────────────────────────────────────────────────── 
                                                                                
▼ wosm - 4 worktrees | codex                                                    
 [1] ! hook-scope                     codex     Agent needs app…   +8 -2 #12 x2 
 [2] ? metadata-refresh               codex     unknown                   +3 -1 
 [3] ! popup-latency                  codex     No progress was… +120 -44 #13 … 
 [4] ◜ pr-info                        codex     working                   #11 ✓ 
                                                                                
▼ observer - 2 worktrees | opencode                                             
 [5] x done-run                       opencode  exited                          
 [6] ! sqlite-cleanup                 opencode  Agent needs app…   +19 -2 #6 x1 
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
─────────────────────────────────────────────────────────────────────────────── 
Q/esc:close N:new A:add Z:refresh 1-9/a-z:open X:remove /:search H:help         
"
`;

exports[`dashboard golden frames renders attention-and-failures at 120x40 1`] = `
"wosm                                                                                                                    
─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────── 
                                                                                                                        
▼ wosm - 4 worktrees | codex                                                                                            
 [1] ! hook-scope                        codex     Agent needs app…                                        +8 -2 #12 x2 
 [2] ? metadata-refresh                  codex     unknown                                                        +3 -1 
 [3] ! popup-latency                     codex     No progress was…                                      +120 -44 #13 … 
 [4] ◜ pr-info                           codex     working                                                        #11 ✓ 
                                                                                                                        
▼ observer - 2 worktrees | opencode                                                                                     
 [5] x done-run                          opencode  exited                                                               
 [6] ! sqlite-cleanup                    opencode  Agent needs app…                                        +19 -2 #6 x1 
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────── 
N:new A:add R:rename Z:refresh 1-9/a-z:open X:rm /:search C:fold H:help Q/esc:close                                     
"
`;

exports[`dashboard golden frames renders attention-and-failures at 60x16 1`] = `
"wosm                                                        
─────────────────────────────────────────────────────────── 
                                                            
▼ wosm - 4 worktrees | codex                                
 [1] ! hook-sco…  codex     Agent needs app…   +8 -2 #12 x2 
 [2] ? metadata…  codex     unknown                   +3 -1 
 [3] ! popup-la…  codex     No progress was… +120 -44 #13 … 
 [4] ◜ pr-info    codex     working                   #11 ✓ 
                                                            
▼ observer - 2 worktrees | opencode                         
 [5] x done-run   opencode  exited                          
 [6] ! sqlite-c…  opencode  Agent needs app…   +19 -2 #6 x1 
                                                            
                                                            
─────────────────────────────────────────────────────────── 
Q/esc:close N:new A:add Z:refresh 1-9/a-z:open X:remove /:… 
"
`;

exports[`dashboard golden frames renders attention-and-failures at 40x12 1`] = `
"wosm                                    
─────────────────────────────────────── 
                                        
▼ wosm - 4 worktrees | codex            
 [1] ! hook-scope          +8 -2 #12 x2 
 [2] ? metadata-refresh           +3 -1 
 [3] ! popup-latency     +120 -44 #13 … 
 [4] ◜ pr-info                    #11 ✓ 
                                        
↓ 3 hidden                              
─────────────────────────────────────── 
Q/esc:close N:new A:add Z:refresh 1-9/… 
"
`;

exports[`dashboard golden frames renders no-projects at 80x24 1`] = `
"wosm                                                                            
─────────────────────────────────────────────────────────────────────────────── 
                                                                                
No projects configured yet.                                                     
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
─────────────────────────────────────────────────────────────────────────────── 
A:Add Project Q/esc:close                                                       
"
`;

exports[`dashboard golden frames renders no-projects at 120x40 1`] = `
"wosm                                                                                                                    
─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────── 
                                                                                                                        
No projects configured yet.                                                                                             
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────── 
A:Add Project Q/esc:close                                                                                               
"
`;

exports[`dashboard golden frames renders no-projects at 60x16 1`] = `
"wosm                                                        
─────────────────────────────────────────────────────────── 
                                                            
No projects configured yet.                                 
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
─────────────────────────────────────────────────────────── 
A:Add Project Q/esc:close                                   
"
`;

exports[`dashboard golden frames renders no-projects at 40x12 1`] = `
"wosm                                    
─────────────────────────────────────── 
                                        
No projects configured yet.             
                                        
                                        
                                        
                                        
                                        
                                        
─────────────────────────────────────── 
A:Add Project Q/esc:close               
"
`;
